<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_qd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorQuranPrimary"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_bold"
            android:textStyle="italic"
            android:text="@string/header"
            android:textSize="14sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_judul"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/futura_bold"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/frame_atas"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/atas"/>
                <TextView
                    android:id="@+id/tv_arab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_arab"
                    android:lineSpacingExtra="16dp"
                    android:textSize="24sp"
                    android:textColor="@color/dark"
                    android:gravity="center"
                    android:fontFamily="@font/isep_misbah"/>
                <TextView
                    android:id="@+id/tv_arti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_arti"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textColor="@color/dark"
                    android:layout_gravity="center_vertical|end"
                    android:fontFamily="@font/futura_medium" />
                <TextView
                    android:id="@+id/tv_referensi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_referensi"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/quicksand_bold"/>
                <ImageView
                    android:id="@+id/frame_bawah"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/bawah"/>
                <TextView
                    android:id="@+id/btn_bagikan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BAGIKAN"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/quicksand_bold"
                    android:textStyle="bold"
                    android:drawablePadding="4dp"
                    android:drawableRight="@drawable/ic_share"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.cardview.widget.CardView>